--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-Flask==3.0.0
-gunicorn==21.2.0
-
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+email-validator==2.2.0
+python-dotenv==1.0.1
+APScheduler==3.10.4
+google-api-python-client==2.140.0
+google-auth==2.35.0
+google-auth-oauthlib==1.2.1
+twilio==9.3.7
