--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,4 @@ google-api-python-client==2.140.0
 google-auth==2.35.0
 google-auth-oauthlib==1.2.1
 twilio==9.3.7
-Flask
-Flask-SQLAlchemy
-Flask-Mail
-twilio
-gunicorn
+gunicorn==22.0.0
